2007-02-05  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* file-ops.cc (file_ops::canonicalize_file_name):
	Provide implementation if realpath function is available.

2007-01-29  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-fftw.h: Sprinkle with OCTAVE_API as needed.

2007-01-17  Michael Goffioul  <michael.goffioul@swing.be>

	* lo-sysdep.cc (octave_chdir): Handle directory names like "C:" on
	Windows systems.

2007-01-16  John W. Eaton  <jwe@octave.org>

	* dSparse.cc: Fix dgbtrf decl for --enable-64.
	(SparseMatrix::bsolve): Fix call to dgbtrf for --enable-64

	* oct-fftw.h (fftw_planner): Provide decl.

2007-01-11  Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in (LINK_DEPS): Include $(CAMD_LIBS) in the list.

2007-01-10  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: Use HAVE_CHOLMOD_CHOLMOD_H, not
	HAVE_UMFPACK_CHOLMOD_H for case of "cholmod/cholmod.h".

2007-01-08  David Bateman  <dbateman@free.fr>

	* oct-sparse.h: Replace sparsesuite with suitesparse and
	SPARSESUITE with SUITESPARSE to match upstream name.

2007-01-05  David Bateman  <dbateman@free.fr>

	* oct-fftw.cc: (octave_fftw_planner::method (void), 
	octave_fftw_planner (FftwMethod)): New methods to interrogate and
	set the FFTW wisdom method used.
	(octave_fftw_planner::create_plan) Modify to allow different 
	methods to be used.
	(octave_fftw_planner): Move class definition from here.
	* oct-fftw.h (octave_fftw_planner): To here. Add method methods
	and FftwMethod enum.

2007-01-03  David Bateman  <dbateman@free.fr>

	* MSparse.cc (SPARSE_A2A2_OP, SPARSE_A2A2_FCN_1,
	SPARSE_A2A2_FCN_1): Modify macros so that scalars stored as
	sparse matrices are special cased.

	* Sparse-op-defs.h: Include mx-ops.h to have access to mixed
	matrix, sparse matrix operations.
	(SPARSE_SMSM_BIN_OP_1, SPARSE_SMSM_BIN_OP_2, SPARSE_SMSM_BIN_OP_3,
	SPARSE_SMSM_CMP_OP, SPARSE_SMSM_BOOL_OP, SPARSE_MSM_BIN_OP_1,
	SPARSE_MSM_BIN_OP_2, SPARSE_MSM_CMP_OP, SPARSE_MSM_BOOL_OP,