@@ -1,3 +1,8 @@
+2007-02-06  John W. Eaton  <jwe@octave.org>
+
+	* plot/__uiobject_draw_axes__.m: Set pt to 0 if marker is ".".
+	* sparse/gplot.m: Use line style - instead of 1.
+
 2007-02-05  Rafael Laboissiere  <rafael@debian.org>
 
 	* plot/print.m: Avoid error message from cellidx.
