@@ -1,3 +1,8 @@
+2007-02-06  John W. Eaton  <jwe@octave.org>
+
+	* file-ops.cc (file_ops::canonicalize_file_name) [HAVE_REALPATH]:
+	Don't delete value returned from realpath.
+
 2007-02-05  Thomas Treichl  <Thomas.Treichl@gmx.net>
 
 	* file-ops.cc (file_ops::canonicalize_file_name):
